--- a/index.html
+++ b/index.html
@@ -1,112 +1,112 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <!-- En-tête de la page -->
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="chatgpt_style_2.css">
-    <link rel="shortcut icon" type="image/x-icon" href="crow_generation/icone_PeReCr.ico">
-    <title> JJ Godeme </title>
-  </head>
+<head>
+  <!-- En-tête de la page -->
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="chatgpt_style_2.css">
+  <link rel="shortcut icon" type="image/x-icon" href="crow_generation/icone_PeReCr.ico">
+  <title> JJ Godeme </title>
+</head>
 <body>
-      <!-- Corps de la page web -->
-<header>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="publications.html">Publications</a></li>
-      <li><a href="software.html">Software</a></li>
-      <li><a href="teaching.html">Teaching</a></li>
-      <li><a href="aboutme.html"> Biography</a></li>
-      <li><a href="mailto:jeanjacquesgodeme@gmail.com"> Contact </a></li>
-    </ul>
-  </nav>
-  <h1>   </h1>
-  <h1> <br/ > </h1>
-  <h2 class="my_name">
-  Homepage of Jean-Jacques Godeme
-  </h2>
-  <!-- Avec l'attribut (ici class), je peux cibler cette  balise h3 dans dans mon css -->
+  <!-- Corps de la page web -->
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="publications.html">Publications</a></li>
+        <li><a href="software.html">Software</a></li>
+        <li><a href="teaching.html">Teaching</a></li>
+        <li><a href="aboutme.html"> Biography</a></li>
+        <li><a href="mailto:jeanjacquesgodeme@gmail.com"> Contact </a></li>
+      </ul>
+    </nav>
+    <h1>   </h1>
+    <h1> <br/ > </h1>
+    <h2 class="my_name">
+      Homepage of Jean-Jacques Godeme
+    </h2>
+    <!-- Avec l'attribut (ici class), je peux cibler cette  balise h3 dans dans mon css -->
     <h3 class="abstract_page">
       _____________________________________________________________________________________________________<br/ >
       This website contains informations about my research, myself and interests.
-    <a style="color: blue;"href="Files/cv_godeme.pdf">[Full CV]</a> </h3>
+      <a style="color: blue;"href="Files/cv_godeme.pdf">[Full CV]</a> </h3>
     </header>
 
     <div class="container">
-    <!--  <img src="photoid.png" alt="id_pic" title="An old photo"/>-->
-    <img src="crow_generation/photo_perso.jpg" alt="crow_pic" title="A crow on books"/></p>
-    <!--mettre une adress mail pour recevoir un mail, Lien en hyperréférence pour  directement envoyer un mail-->
+      <!--  <img src="photoid.png" alt="id_pic" title="An old photo"/>-->
+      <img src="crow_generation/photo_perso.jpg" alt="crow_pic" title="A crow on books"/></p>
+      <!--mettre une adress mail pour recevoir un mail, Lien en hyperréférence pour  directement envoyer un mail-->
       <p>  I am currently a Ph.D. student at Université de Caen-Normandie/France with <a href="https://fadili.users.greyc.fr/" target="_blank">Prof. Jalal Fadili</a> in
-       the <a href="https://www.greyc.fr/">Greyc Laboratory</a>. </p>
-       <p><strong>Interests:</strong> Optimization(convex, non-convex/smooth, non-smooth),
-       Bregman-based algorithms, inverse problems and computational Optimal Transport.</p>
-      <p>Before that, I graduated from Université Paris-Saclay/France with the scholarship
-       <a href="https://www.fondation-hadamard.fr/fr/la-fmjh-soutient/formation/bourses-master/"target="_blank">Sophie-Germain</a>.<br/ >
-      I have a Master's degree in Applied Mathemetics with a focus on optimization. I did my M2 internship with<br/ >
-      <a href="https://www.sites.google.com/view/lmonsaingeon/home?pli=1">Léonard Monsaingeon</a> and <a href="https://gallouet.github.io/">Thomas Gallouet<a>
-      on <a href="https://optimaltransport.github.io/">Optimal transport</a> inside the <a href="https://team.inria.fr/mokaplan/"> MOKAPLAN team</a>.</p>
-        ______________________________________________________________________________________________________<br/ >
-<h2>Talks and events</h2>
+        the <a href="https://www.greyc.fr/">Greyc Laboratory</a>. </p>
+        <p><strong>Interests:</strong> Optimization(convex, non-convex/smooth, non-smooth),
+          Bregman-based algorithms, inverse problems and computational Optimal Transport.</p>
+          <p>Before that, I graduated from Université Paris-Saclay/France with the scholarship
+            <a href="https://www.fondation-hadamard.fr/fr/la-fmjh-soutient/formation/bourses-master/"target="_blank">Sophie-Germain</a>.<br/ >
+            I have a Master's degree in Applied Mathemetics with a focus on optimization. I did my M2 internship with<br/ >
+            <a href="https://www.sites.google.com/view/lmonsaingeon/home?pli=1">Léonard Monsaingeon</a> and <a href="https://gallouet.github.io/">Thomas Gallouet<a>
+              on <a href="https://optimaltransport.github.io/">Computational optimal transport</a> inside the <a href="https://team.inria.fr/mokaplan/"> MOKAPLAN team</a>.</p>
+              ______________________________________________________________________________________________________<br/ >
+              <h2>Talks and events</h2>
 
 
 
 
-<!--Ceci permet de créer des paragraphes-->
+              <!--Ceci permet de créer des paragraphes-->
 
-<!--    Ceci est mon premier test alors soyez indulgents s'il
-        vous plaît, j'apprends petit à petit <mark>comment cela marche!</mark> <br />  <!--Ceci a pour effet de surligner le texte-->
-<!-- Cette fonctionalité permet de mettre le corps en italique -->
+              <!--    Ceci est mon premier test alors soyez indulgents s'il
+              vous plaît, j'apprends petit à petit <mark>comment cela marche!</mark> <br />  <!--Ceci a pour effet de surligner le texte-->
+              <!-- Cette fonctionalité permet de mettre le corps en italique -->
 
-<!--Je continue de m'amuser à fond. Voir <a href="#session2">plus bas</a> <br />
-      <em>Pour ce faire, on va tout tester. </em>
-      </p>
-       <strong> Nous allons tenter de mettre en gras </strong><br />
-       Voici les sept jours de la semaine:
-        <ul>
-          <li> Lundi </li>
-          <li> Mardi </li>
-          <li> Mercredi </li>
-          <li> etc...   </li>
-        </ul> <br />
+              <!--Je continue de m'amuser à fond. Voir <a href="#session2">plus bas</a> <br />
+              <em>Pour ce faire, on va tout tester. </em>
+            </p>
+            <strong> Nous allons tenter de mettre en gras </strong><br />
+            Voici les sept jours de la semaine:
+            <ul>
+            <li> Lundi </li>
+            <li> Mardi </li>
+            <li> Mercredi </li>
+            <li> etc...   </li>
+          </ul> <br />
           Et voici les mois de l'année:
           <ol>
-            <li> Janvier </li>
-            <li> Février </li>
-            <li> Mars </li>
-            <li> etc...   </li>
-          </ol><br />
-          Voici trois planète du système solaire:
-          <dl>
-            <li> <span class="planete">Terre</span></li>
-            <li> Vénus </li>
-            <li> Mars </li>
-          </dl><br />
-          <span class="planete">Jupiter</span> est la plus géante des gazeuses du système elle possède plusieurs sattellite:
-          <dt>
-            <li> Europe </li>
-            <li> Callitso </li>
-            <li> Ganymède </li>
-          </dt><br />
-          <span class="planete"> Neptune</span> aussi est une géante gazeuse dont voici des sattellites:
-          <dt>
-            <li> Hippocampe </li>
-            <li> Larissa </li>
-            <li> Galatée </li>
-          </dt> -->
-          <!-- Comment réaliser un lien absolue vers une page web d'internet et rajouter target blank pour ouvrir son site dans un nouvel onglet-->
+          <li> Janvier </li>
+          <li> Février </li>
+          <li> Mars </li>
+          <li> etc...   </li>
+        </ol><br />
+        Voici trois planète du système solaire:
+        <dl>
+        <li> <span class="planete">Terre</span></li>
+        <li> Vénus </li>
+        <li> Mars </li>
+      </dl><br />
+      <span class="planete">Jupiter</span> est la plus géante des gazeuses du système elle possède plusieurs sattellite:
+      <dt>
+      <li> Europe </li>
+      <li> Callitso </li>
+      <li> Ganymède </li>
+    </dt><br />
+    <span class="planete"> Neptune</span> aussi est une géante gazeuse dont voici des sattellites:
+    <dt>
+    <li> Hippocampe </li>
+    <li> Larissa </li>
+    <li> Galatée </li>
+  </dt> -->
+  <!-- Comment réaliser un lien absolue vers une page web d'internet et rajouter target blank pour ouvrir son site dans un nouvel onglet-->
 
-<!--           <p> Les informations sont disponibles sur:
-          <a href="https://manuelnumeriquemax.belin.education/physique_chimie_specialite-premiere/topics/phc-spe-t2c02-056-a_neptune-et-ses-satellites-2h" target="_blank">
-          Manuel du numérique</a> </p> -->
+  <!--           <p> Les informations sont disponibles sur:
+  <a href="https://manuelnumeriquemax.belin.education/physique_chimie_specialite-premiere/topics/phc-spe-t2c02-056-a_neptune-et-ses-satellites-2h" target="_blank">
+  Manuel du numérique</a> </p> -->
 
-<!--Réaliser un point d'ancre vers une autre page et rajouter un titre ou bulle d'information sur la Page-->
+  <!--Réaliser un point d'ancre vers une autre page et rajouter un titre ou bulle d'information sur la Page-->
 
-        <!--Réaliser un point d'ancre vers mon bas de page par exemple-->
-      <!--  <h2 id="session2">Session 2</h2>
-        <p> Dans  cette session, nous allons voir les Lyrics de la chanson: </p>
+  <!--Réaliser un point d'ancre vers mon bas de page par exemple-->
+  <!--  <h2 id="session2">Session 2</h2>
+  <p> Dans  cette session, nous allons voir les Lyrics de la chanson: </p>
 
-      <!--Faire télécharger  ma photo, juste remplacer  le href par l'endroit qui correspond -->
-    <!--  <p><a href="photoid.png"> Ma Photo à télécharger</a>
+  <!--Faire télécharger  ma photo, juste remplacer  le href par l'endroit qui correspond -->
+  <!--  <p><a href="photoid.png"> Ma Photo à télécharger</a>
 
   <!--
   Mini Code pour que ton image s'agrandisse à sa taille original lorsque l'on clique dessus
@@ -115,31 +115,36 @@
   dessus !<br />
   <a href="img/montagne.jpg"><img src="img/montagne_mini.jpg"
   alt="Photo de montagne" title="Cliquez pour agrandir" /></a>
+</p>
+-->
+
+
+<!--
+Code supplémentaire pour rajouter des figures avec leurs Légendes
+<figure>
+<img src="images/blocnotes.png" alt="Bloc-Notes" />
+<figcaption>Le logiciel Bloc-Notes</figcaption>
+</figure>-->
+</div>
+
+
+<footer id="footer">
+  <div>
+    <span>© 2023 JJ Godeme</span>
+    <p>
+      <a href="https://www.youtube.com/channel/UCa1h3phvDA8Y-rJ425Eaxeg" target="blank">
+        <img width="30px" src="crow_generation/youtube.svg.png" alt="youtube_icon">
+      </a>
+    </p>
+    <p class="copyright-and-socials">
+      <a href="https://www.linkedin.com/in/jean-jacques-godeme-247306163/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3Bb18ijQGRTUSSMPuII4dzng%3D%3D" target="blank">
+        <img  width="30px" src="crow_generation/linkedin.svg.png" alt="linkedin_icon">
+      </a>
+    </p>
+  </div>
+  <p>
+    Last updated: February 19th, 2023.
   </p>
-  -->
-
-
-  <!--
-  Code supplémentaire pour rajouter des figures avec leurs Légendes
-  <figure>
-  <img src="images/blocnotes.png" alt="Bloc-Notes" />
-  <figcaption>Le logiciel Bloc-Notes</figcaption>
-  </figure>-->
-    </div>
-
-
-    <footer id="footer">
-      <br/ >
-      ___________________________________________________________________________________________________________________________________________________________________________________________<br/ >
-          <p>© 2023 JJ Godeme
-         <a href="https://www.linkedin.com/in/jean-jacques-godeme-247306163/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3Bb18ijQGRTUSSMPuII4dzng%3D%3D" target="blank">
-           LinkedIn</a>
-          <a href="https://www.youtube.com/channel/UCa1h3phvDA8Y-rJ425Eaxeg" target="blank">Youtube</a>
-         Last updated: February 17th, 2023.
-         </p>
-    <br/ >
-    ___________________________________________________________________________________________________________________________________________________________________________________________<br/ >
-    </footer>
-
-  </body>
+</footer>
+</body>
 </html>
