--- a/software.html
+++ b/software.html
@@ -20,12 +20,21 @@
 </div>
 
 <footer id="footer">
-  <br/ >___________________________________________________________________________________________________________________________________________________________________________________________<br/ >
-      <p>© 2023 JJ Godeme
-     <a href="https://www.linkedin.com/in/jean-jacques-godeme-247306163/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3Bb18ijQGRTUSSMPuII4dzng%3D%3D">
-       LinkedIn</a>
-     Last updated: February 12th, 2023.
-     </p>
-<br/ >___________________________________________________________________________________________________________________________________________________________________________________________<br/ >
+  <div>
+    <span>© 2023 JJ Godeme</span>
+    <p>
+      <a href="https://www.youtube.com/channel/UCa1h3phvDA8Y-rJ425Eaxeg" target="blank">
+        <img width="30px" src="crow_generation/youtube.svg.png" alt="youtube_icon">
+      </a>
+    </p>
+    <p class="copyright-and-socials">
+      <a href="https://www.linkedin.com/in/jean-jacques-godeme-247306163/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3Bb18ijQGRTUSSMPuII4dzng%3D%3D" target="blank">
+        <img  width="30px" src="crow_generation/linkedin.svg.png" alt="linkedin_icon">
+      </a>
+    </p>
+  </div>
+  <p>
+    Last updated: February 19th, 2023.
+  </p>
 </footer>
 </html>
