--- a/aboutme.html
+++ b/aboutme.html
@@ -44,12 +44,17 @@ More about me! (<a href="personal.html">Don't click</a>)
     <span>© 2023 JJ Godeme</span>
     <p>
       <a href="https://www.youtube.com/channel/UCa1h3phvDA8Y-rJ425Eaxeg" target="blank">
-        <img width="30px" src="crow_generation/youtube.svg.png" alt="youtube_icon">
+        <img width="30px" src="crow_generation/youtube.svg.png" alt="youtube_icon" title="Youtube Channel">
       </a>
     </p>
     <p class="copyright-and-socials">
       <a href="https://www.linkedin.com/in/jean-jacques-godeme-247306163/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3Bb18ijQGRTUSSMPuII4dzng%3D%3D" target="blank">
-        <img  width="30px" src="crow_generation/linkedin.svg.png" alt="linkedin_icon">
+        <img  width="30px" src="crow_generation/linkedin.svg.png" alt="linkedin_icon" title="Linkedin profile">
+      </a>
+    </p>
+    <p>
+      <a href="https://github.com/jjgodeme" target="blank">
+        <img  width="30px" src="crow_generation/github.svg.png" alt="github_icon" title="Github profile">
       </a>
     </p>
   </div>
