--- a/index.html
+++ b/index.html
@@ -46,7 +46,20 @@
             <a href="https://www.sites.google.com/view/lmonsaingeon/home?pli=1">Léonard Monsaingeon</a> and <a href="https://gallouet.github.io/">Thomas Gallouet<a>
               on <a href="https://optimaltransport.github.io/">Computational optimal transport</a> inside the <a href="https://team.inria.fr/mokaplan/"> MOKAPLAN team</a>.</p>
               ______________________________________________________________________________________________________<br/ >
-              <h2>Talks and events</h2>
+              <h2>Conferences, workshops and Invited talks</h2>
+                <ul>
+                  <li> Measure-theoretic Approaches and Optimal Transportation in Statistics, 21-25/11/2022, IHP Paris/France.</li>
+                  <li> Workshop GdR MOA, 11-14/10/2022, Nice/France (Presentation of <em>Provable phase retrieval with mirror descent </em>).  </li>
+                  <li> Conference Gretsi on Image and signal processing, 06-09/09/2022, Nancy/France (Presentation of <em>Provable phase retrieval with mirror descent</em>). </li>
+                  <li> Curves and Surfaces, 20-24/06/2022, Arcachon/France (Presentation of <em>Provable phase retrieval with mirror descent</em>).</li>
+                  <li> SMAI-Mode days, 30-03/06/2022, Limoges/France (Presentation of <em>Provable phase retrieval with mirror descent</em>). </li>
+                  <li> CIMPA: Modélisation, analyse mathématiques dans la gestion des déchets ménagers, 03-13/07/2019, Kenitra/Maroc.</li>
+                  <li> Winter School: On applied non-linear dynamics and scientific writing, 4-8/02/2019, M'Bour/Senegal.</li>
+                  <li> Operations Research Techniques and Applications School for Africa (ORTASA), 20-29/11/2018, Dangbo/Benin.</li>
+                </ul>
+
+
+
 
 
 
