--- a/publications.html
+++ b/publications.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>Pre-prints and Publications<br/ >------------------------<br/ >
+      <h1>Pre-prints and Publications<br/ >______________________<br/ >
       </h1>
       <nav>
         <a href="index.html">Home</a>
@@ -19,13 +19,13 @@
     <img src="crow_generation/23BA76b7_r.jpeg" alt="crow_on_books" title="Crows">
   <br/ >_________________________________________________________________________________________________________________________________________________<br/ >
         <ul>
-      <li> J-J. Godeme, J. Fadili, G. Soriano, M. Zerrad, M. Lequime, and C. Amra. <em>Stable Phase Retrieval with  mirror descent.</em>,(To be submitted), 2023. </li>
-      <li> X. Buet, M. Zerrad, M. Lequime, G. Soriano, J.-J. Godeme, M.J. Fadili, C. Amra,
+      <li> <strong>J-J. Godeme</strong>, J. Fadili, G. Soriano, M. Zerrad, M. Lequime, and C. Amra. <em>Stable Phase Retrieval with  mirror descent.</em>,(To be submitted), 2023. </li>
+      <li> X. Buet, M. Zerrad, M. Lequime, G. Soriano, <strong>J-J. Godeme</strong>, M.J. Fadili, C. Amra,
         <em>Instantaneous measurement of surface roughness spectra <br/ >
           using white light scattering projected on a spectrometer</em>,<a href="https://hal.science/hal-03925658/">hal-03925658</a>, 2023. </li>
-        <li> J-J. Godeme, J. Fadili, X. Buet, M. Zerrad, M. Lequime, and C. Amra. <em>Provable phase retrieval with mirror descent.</em>
+        <li> <strong>J-J. Godeme</strong>, J. Fadili, X. Buet, M. Zerrad, M. Lequime, and C. Amra. <em>Provable phase retrieval with mirror descent.</em>
         <a href="https://arxiv.org/abs/2210.09248">arXiv:2210.09248</a>, 2022. </li>
-        <li>  X. Buet, M. Zerrad, M. Lequime, G. Soriano, J.-J. Godeme, M.J. Fadili, C. Amra,
+        <li>  X. Buet, M. Zerrad, M. Lequime, G. Soriano, <strong>J-J. Godeme</strong>, M.J. Fadili, C. Amra,
          <em>Immediate and one-point roughness measurements using <br/ >
            spectrally shaped light,</em> Optics Express, Vol. 30, No. 10, pp. 16078-16093, 2022.
          <a href="https://opg.optica.org/oe/fulltext.cfm?uri=oe-30-10-16078&id=472301&ibsearch=false">Link</a> </li>
