--- a/teaching.html
+++ b/teaching.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Teaching<br/ >----------<br/ >
+      <h1>Teaching<br/ >_______<br/ >
       </h1>
       <nav>
         <a href="index.html">Home</a>
@@ -18,9 +18,9 @@
     <img src="crow_generation/crow_board_2.jpg" alt="crow_board" title="A crow on the desktop"/><br/ >
     <br/ >_________________________________________________________________________________________________________________________________________________<br/ >
       <ul>
-        <li>2022-2023: Maths tools for computer science (TD,Labs) </li>
-        <li>2021-2022: Maths tools for computer science (TD,Labs) </li>
-        <li>2020-2021: Maths tools for computer science (TD,Labs) </li>
+        <li>2021-2022: Mathemetics for computer science, Ensicaen, 2nd year of engineering, TD & Labs (16h).</li>
+        <li>2022-2023: Mathemetics for computer science, Ensicaen, 2nd year of engineering, TD & Labs (16h).</li>
+        <li>2020-2021: Mathemetics for computer science, Ensicaen, 2nd year of engineering, TD & Labs (16h).</li>
       </ul>
 </div>
 <footer id="footer">
