--- a/software.html
+++ b/software.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>Software<br/ >----------<br/ >
+      <h1>Software<br/ >_______<br/ >
       </h1>
       <nav>
         <a href="index.html">Home</a>
