--- a/publications.html
+++ b/publications.html
@@ -19,10 +19,10 @@
     <img src="crow_generation/23BA76b7_r.jpeg" alt="crow_on_books" title="Crows">
   <br/ >_________________________________________________________________________________________________________________________________________________<br/ >
         <ul>
-      <li> <strong>J-J. Godeme</strong>, J. Fadili, G. Soriano, M. Zerrad, M. Lequime, and C. Amra. <em>Stable Phase Retrieval with  mirror descent.</em>,(To be submitted), 2023. </li>
+      <li> <strong>J-J. Godeme</strong>, J. Fadili, M. Zerrad, M. Lequime, and C. Amra. <em>Stable Phase Retrieval with  mirror descent.</em>,(To be submitted), 2023. </li>
       <li> X. Buet, M. Zerrad, M. Lequime, G. Soriano, <strong>J-J. Godeme</strong>, M.J. Fadili, C. Amra,
         <em>Instantaneous measurement of surface roughness spectra <br/ >
-          using white light scattering projected on a spectrometer</em>,<a href="https://hal.science/hal-03925658/">hal-03925658</a>, 2023. </li>
+          using white light scattering projected on a spectrometer</em>,<a href="https://opg.optica.org/ao/fulltext.cfm?uri=ao-62-7-B164&id=525735">Applied Optics</a>, January 2023. </li>
         <li> <strong>J-J. Godeme</strong>, J. Fadili, X. Buet, M. Zerrad, M. Lequime, and C. Amra. <em>Provable phase retrieval with mirror descent.</em>
         <a href="https://arxiv.org/abs/2210.09248">arXiv:2210.09248</a>, 2022. </li>
         <li>  X. Buet, M. Zerrad, M. Lequime, G. Soriano, <strong>J-J. Godeme</strong>, M.J. Fadili, C. Amra,
@@ -51,7 +51,7 @@
     </p>
   </div>
   <p>
-    Last updated: February 19th, 2023.
+    Last updated: February 21th, 2023.
   </p>
 </footer>
 </body>
