Adding_my_twitter_profile

--- a/publications.html
+++ b/publications.html
@@ -48,6 +48,9 @@
       <a href="https://github.com/jjgodeme" target="blank">
         <img  width="30px" src="crow_generation/github.svg.png" alt="github_icon" title="Github profile">
       </a>
+      <a href="https://twitter.com/jjgodeme" target="blank">
+        <img width="30px" src="crow_generation/twitter.svg.png" alt="twitter_icon" title="Twitter  profile" >
+      </a> 
     </p>
   </div>
   <p>
