--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@ Code supplémentaire pour rajouter des figures avec leurs Légendes
       <a href="https://github.com/jjgodeme" target="blank">
         <img  width="30px" src="crow_generation/github.svg.png" alt="github_icon" title="Github profile">
       </a>
+      <a href="https://twitter.com/jjgodeme" target="blank">
+        <img width="30px" src="crow_generation/twitter.svg.png" alt="twitter_icon" title="Twitter  profile" >
+      </a> 
     </p>
   </div>
   <p>
