--- a/personal.html
+++ b/personal.html
@@ -284,6 +284,9 @@ Voici une liste non-exhaustive  de certains de mes artistes ou compositeurs pré
       <a href="https://github.com/jjgodeme" target="blank">
         <img  width="30px" src="crow_generation/github.svg.png" alt="github_icon" title="Github profile">
       </a>
+      <a href="https://twitter.com/jjgodeme" target="blank">
+        <img width="30px" src="crow_generation/twitter.svg.png" alt="twitter_icon" title="Twitter  profile" >
+      </a> 
     </p>
   </div>
   <p>
