--- a/aboutme.html
+++ b/aboutme.html
@@ -8,8 +8,9 @@
   </head>
   <body>
     <header>
-      <h1>Biography<br/ >--------<br/ >
-      </h1>
+      <h1>   </h1>
+      <h1> <br/ > </h1>
+      <h2>Biography</h2>
       <nav>
         <a href="index.html">Home</a>
       </nav>
@@ -62,7 +63,7 @@ More about me! (<a href="personal.html">Don't click</a>)
     </p>
   </div>
   <p>
-      Last updated: February 26th, 2023.
+      Last updated: February 27th, 2023.
   </p>
 </footer>
 </body>
