--- a/publications.html
+++ b/publications.html
@@ -9,8 +9,9 @@
   </head>
   <body>
     <header>
-      <h1>Pre-prints and Publications<br/ >______________________<br/ >
-      </h1>
+      <h1>   </h1>
+      <h1> <br/ > </h1>
+      <h2>Pre-prints and Publications</h2>
       <nav>
         <a href="index.html">Home</a>
       </nav>
@@ -54,7 +55,7 @@
     </p>
   </div>
   <p>
-    Last updated: February 26th, 2023.
+    Last updated: February 27th, 2023.
   </p>
 </footer>
 </body>
