--- a/teaching.html
+++ b/teaching.html
@@ -8,8 +8,9 @@
   </head>
   <body>
     <header>
-      <h1>Teaching<br/ >_______<br/ >
-      </h1>
+      <h1>   </h1>
+      <h1> <br/ > </h1>
+      <h2>Teaching</h2>
       <nav>
         <a href="index.html">Home</a>
       </nav>
@@ -45,8 +46,8 @@
       </a>
     </p>
   </div>
-  <p>
-        Last updated: February 26th, 2023.
+  <p>br/ >________<br/ >
+        Last updated: February 27th, 2023.
   </p>
 </footer>
 
