--- a/software.html
+++ b/software.html
@@ -9,8 +9,10 @@
   </head>
   <body>
     <header>
-      <h1>Software<br/ >_______<br/ >
-      </h1>
+      <h1>   </h1>
+      <h1> <br/ > </h1>
+      <h2>Software
+      </h2>
       <nav>
         <a href="index.html">Home</a>
       </nav>
@@ -42,7 +44,7 @@
     </p>
   </div>
   <p>
-        Last updated: February 26th, 2023.
+        Last updated: February 27th, 2023.
   </p>
 </footer>
 </html>
