--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
       <p>  I am currently a Ph.D. student at Université de Caen-Normandie/France with <a href="https://fadili.users.greyc.fr/" target="_blank">Prof. Jalal Fadili</a> in
         the <a href="https://www.greyc.fr/">Greyc Laboratory</a>. </p>
         <p><strong>Interests:</strong> Optimization(convex, non-convex/smooth, non-smooth),
-          Bregman-based algorithms, inverse problems and computational Optimal Transport.</p>
+          Bregman-based algorithms, solving Inverse problems/Phase retrieval, and computational Optimal Transport.</p>
           <p>Before that, I graduated from Université Paris-Saclay/France with the scholarship
             <a href="https://www.fondation-hadamard.fr/fr/la-fmjh-soutient/formation/bourses-master/"target="_blank">Sophie-Germain</a>.<br/ >
             I have a Master's degree in Applied Mathemetics with a focus on optimization. I did my M2 internship with<br/ >
             <a href="https://www.sites.google.com/view/lmonsaingeon/home?pli=1">Léonard Monsaingeon</a> and <a href="https://gallouet.github.io/">Thomas Gallouet<a>
               on <a href="https://optimaltransport.github.io/">Computational optimal transport</a> inside the <a href="https://team.inria.fr/mokaplan/"> MOKAPLAN team</a>.</p>
-              ______________________________________________________________________________________________________<br/ >
-              <h2>Conferences, workshops and Invited talks</h2>
+              _________________________________________________________________________________________________________________________________________________<br/ >
+              <h2>Conferences, workshops and talks</h2>
                 <ul>
                   <li> Measure-theoretic Approaches and Optimal Transportation in Statistics, 21-25/11/2022, IHP Paris/France.</li>
                   <li> Workshop GdR MOA, 11-14/10/2022, Nice/France (Presentation of <em>Provable phase retrieval with mirror descent </em>).  </li>
@@ -165,7 +165,7 @@ Code supplémentaire pour rajouter des figures avec leurs Légendes
     </p>
   </div>
   <p>
-    Last updated: February 27th, 2023.
+    Last updated: March 8th, 2023.
   </p>
 </footer>
 </body>
